# unity-agent

./: .env  .env.example  .gitignore  AUDIT.md  FORUM_AUDIT.md  FORUM_PROPOSED_FIXES.md  OBSERVATIONS.md  PHASE_RUNNER_REFACTOR.md  PROPOSED_FIXES.md  README.md  fix_indent.py  fix_pipeline.py  main.py  pyproject.toml
PROMPTS/EXPLORATION/: FF.md  FT.md  TF.md
PROMPTS/FORMALIZATION/: F.md  T.md
PROMPTS/PREPARATION/: F.md  T.md
SUBAGENTS/GENERATION/: GENERATOR.md
SUBAGENTS/SEMIFORMALIZATION/: TF.md
forum_sards/: balances.json  chunk-def-critical-point.json  chunk-def-critical-value.json  chunk-def-regular-point.json  chunk-def-regular-value.json  chunk-def-submersion.json  chunk-lem-baby-fubini.json  chunk-lem-ift-case1.json  chunk-lem-ift-case2.json  chunk-lem-image-union.json  chunk-lem-lindelof.json  chunk-lem-stratification.json  chunk-lem-taylor-case3.json  chunk-thm-sard.json  config.json  exploration.json  generation.json  global.json  retrospective.json  semiformalization.json  source-scan.json  validation.json
unity_agent/: __init__.py  cli.py  forum_mcp.py  forum_web.py  pipeline.py  setup_cmd.py
unity_agent/DEFAULT_PROMPTS/: CRITIC.md  GENERATION.md  INFERENCE.md  RESOLVER.md  RETROSPECTIVE.md  SOURCE_SCAN.md  VALIDATION.md
unity_agent/DEFAULT_TEAMS/: CRITIC.md  GENERATION.md  RETROSPECTIVE.md  VALIDATION.md
unity_agent/PROMPTS/: CRITIC.md  GENERATION.md  INFERENCE.md  RETROSPECTIVE.md  SOURCE_SCAN.md  VALIDATION.md
unity_agent/TEAMS/: CRITIC.md  GENERATION.md  RETROSPECTIVE.md  VALIDATION.md
unity_agent/scripts/: analyze_let_usage.py  (+13 more)
(+186 files in other folders)
